--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
   <section class="products" id="product-list"></section>
   <section id="contact-section" style="margin-top:20px; border:1px solid #ddd; padding:10px; max-width:400px;">
   <h2>Obsługa klienta</h2>
-  <p><strong>Numer telefonu:</strong><br>570 744 013</p>
-  <p><strong>Mail:</strong><br>kontakt@motofanzone.pl</p>
-  <p><strong>Instagram:</strong><br><a href="https://www.instagram.com/MotoFanZone" target="_blank">MotoFanZone</a></p>
+  <p><strong>Numer telefonu:</strong><br>537 005 269</p>
+  <p><strong>Mail:</strong><br>fajnebreloki.pl@gmail.com</p>
+  <p><strong>Instagram:</strong><br><a href="https://www.instagram.com/MotoFanZone" target="_blank">fajnebreloki</a></p>
 </section>
 </main>
 
@@ -150,3 +150,4 @@
 
 </body>
 </html>
+
